Wrap PriorityPicker in a div to fix padding issues

--- a/services/frontend/src/components/shared/controls/priority-picker.scss
+++ b/services/frontend/src/components/shared/controls/priority-picker.scss
@@ -1,5 +1,9 @@
+.priority-picker-container {
+  display: flex;
+}
+
 .priority-group {
-  padding-bottom: 14px;
+  margin-bottom: 14px !important;
 }
 
 .priority-slider {
